# java-accessor-generator

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/compiler/: mod.rs
src/compiler/constructs/: array_accessor.rs  class_constructor.rs  clear_inner_refs.rs  clear_inner_refs_array.rs  field_setters.rs  mod.rs  nested_array_accessor.rs  single_class_accessor.rs  single_enum_accessor.rs
src/java/: class.rs  field.rs  java_enum.rs  method.rs  mod.rs  visibility.rs
