[package]
name = "java-accessor-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bon = "2.3.0"
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
ron = "0.8.1"
serde = { version = "1.0.209", features = ["derive"] }
thiserror = "1.0.63"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
